Minor fixes (consistent captions; remove induction)

--- a/assignments/06_kocher/theorie.tex
+++ b/assignments/06_kocher/theorie.tex
@@ -43,7 +43,7 @@ Suchen, Einf{\"u}gen, RotiereNachLinks/Rechts, Entfernen, Vereinige und Spalte,
 sei auf die Folien vom 14.04.2016 verwiesen.
 \newpage
 %\clearpage
-i.)F{\"u}gen Sie die Schl{\"u}ssel $f$, $g$, $h$, $e$, $b$, $a$, $c$ in einen
+i.) F{\"u}gen Sie die Schl{\"u}ssel $f$, $g$, $h$, $e$, $b$, $a$, $c$ in einen
     (anfangs leeren) Treap ein. Die Priorit{\"a}ten dieser Schl{\"u}ssel sind
     wie folgt gegeben: $a:8$, $b:15$, $c:2$, $e:3$, $f:7$, $g:6$, $h:25$, $i:22$,
     $j:19$, $k:13$.\\
@@ -68,7 +68,7 @@ Insert $g_{6}$:
       child { node [left = .75mm] { f \\ 7 } };
     \end{tikzpicture}
     \label{subfig:aufg9-i-1-after}
-    \caption{Nachher}
+    \caption{Nach RotiereNachLinks($f_7$)}
   \end{subfigure}
   \label{fig:aufg9-i-1}
   
@@ -114,7 +114,7 @@ Insert $e_{3}$:
       child { node [right = .75mm] { h \\ 25 } };
     \end{tikzpicture}
     \label{subfig:aufg9-i-1-before}
-    \caption{nach: RotiereNachRechts($f_{7}$)}
+    \caption{Nach RotiereNachRechts($f_{7}$)}
   \end{subfigure}
   
   \begin{subfigure}[b]{.4\textwidth}
@@ -127,7 +127,7 @@ Insert $e_{3}$:
       };
     \end{tikzpicture}
     \label{subfig:aufg9-i-1-after}
-    \caption{Nachher (nach: RotiereNachRechts($g_{6}$))}
+    \caption{Nach RotiereNachRechts($g_{6}$)}
   \end{subfigure}
   \label{fig:aufg9-i-1}
   
@@ -184,7 +184,7 @@ Insert $a_{8}$:
       };
     \end{tikzpicture}
     \label{subfig:aufg9-i-1-after}
-    \caption{Nachher (nach: RotiereNachRechts($b_{15}$))}
+    \caption{Nach RotiereNachRechts($b_{15}$)}
   \end{subfigure}
   \label{fig:aufg9-i-1}
 
@@ -227,7 +227,7 @@ Insert $c_{2}$:
       };
     \end{tikzpicture}
     \label{subfig:aufg9-i-1-after}
-    \caption{nach: RotiereNachLinks($b_{15}$)}
+    \caption{Nach RotiereNachLinks($b_{15}$)}
   \end{subfigure}
   \label{fig:aufg9-i-1}
     \quad
@@ -246,7 +246,7 @@ Insert $c_{2}$:
       };
     \end{tikzpicture}
     \label{subfig:aufg9-i-1-after}
-    \caption{nach: RotiereNachLinks($a_{8}$)}
+    \caption{Nach RotiereNachLinks($a_{8}$)}
   \end{subfigure}
   \label{fig:aufg9-i-1}
   \quad
@@ -265,7 +265,7 @@ Insert $c_{2}$:
       };
     \end{tikzpicture}
     \label{subfig:aufg9-i-1-after}
-    \caption{Nachher (nach: RotiereNachRechts($e_{3}$))}
+    \caption{Nach RotiereNachRechts($e_{3}$)}
   \end{subfigure}
   \label{fig:aufg9-i-1}
   
@@ -310,7 +310,7 @@ ii.) Entfernen Sie $e$ aus dem Treap.
       
     \end{tikzpicture}
     \label{subfig:aufg9-i-1-after}
-    \caption{nach: $g_{6}$ is rechtes Kind von $e_{3}$ $\implies$ RotiereNachLinks($e_{3}$)}
+    \caption{Nach: $g_{6}$ ist rechtes Kind von $e_{3}$ $\implies$ RotiereNachLinks($e_{3}$)}
   \end{subfigure}
   \quad
   \begin{subfigure}[b]{.45\textwidth}
@@ -328,7 +328,7 @@ ii.) Entfernen Sie $e$ aus dem Treap.
       
     \end{tikzpicture}
     \label{subfig:aufg9-i-1-after}
-    \caption{nach: $f_{7}$ is rechtes Kind von $e_{3}$ $\implies$ RotiereNachLinks($e_{3}$)}
+    \caption{Nach: $f_{7}$ ist rechtes Kind von $e_{3}$ $\implies$ RotiereNachLinks($e_{3}$)}
   \end{subfigure}
 \end{figure}
 
@@ -375,7 +375,7 @@ Insert $j_{19}$:
       child { node [left = .75mm] { i \\ 22 } };
     \end{tikzpicture}
     \label{subfig:aufg9-i-1-after}
-    \caption{Nachher (nach: RotiereNachLinks($i_{22}$))}
+    \caption{Nach RotiereNachLinks($i_{22}$)}
   \end{subfigure}
   \label{fig:aufg9-i-1} 
 \end{figure}
@@ -401,12 +401,12 @@ Insert $k_{13}$:
       child { node [left = .75mm] { i \\ 22 } }};
     \end{tikzpicture}
     \label{subfig:aufg9-i-1-after}
-    \caption{Nachher (nach: RotiereNachLinks($j_{19}$))}
+    \caption{Nach RotiereNachLinks($j_{19}$)}
   \end{subfigure}
   \label{fig:aufg9-i-1} 
 \end{figure}
 \newpage
-Vereinige($T_1$,$T_2$):
+Vereinige($T_1$, $T_2$):
 \begin{figure}[H]
  
   \begin{subfigure}[b]{.4\textwidth}
@@ -487,7 +487,7 @@ Entferne Wurzel aus Treap:
       
     \end{tikzpicture}
     \label{subfig:aufg9-i-1-after}
-    \caption{nach: $c_{2}$ is linkes Kind von $\dot{k}_{-\infty}$ $\implies$ 			RotiereNachRechts($\dot{k}_{-\infty}$)}
+    \caption{Nach $c_{2}$ ist linkes Kind von $\dot{k}_{-\infty}$ $\implies$ 			RotiereNachRechts($\dot{k}_{-\infty}$)}
   \end{subfigure} 
   }
   \quad
@@ -510,7 +510,7 @@ Entferne Wurzel aus Treap:
       
     \end{tikzpicture}
     \label{subfig:aufg9-i-1-after}
-    \caption{nach: $g_{6}$ is linkes Kind von $\dot{k}_{-\infty}$ $\implies$ 			RotiereNachRechts($\dot{k}_{-\infty}$)}
+    \caption{Nach $g_{6}$ ist linkes Kind von $\dot{k}_{-\infty}$ $\implies$ 			RotiereNachRechts($\dot{k}_{-\infty}$)}
   \end{subfigure} 
   }
   \quad
@@ -533,7 +533,7 @@ Entferne Wurzel aus Treap:
       
     \end{tikzpicture}
     \label{subfig:aufg9-i-1-after}
-    \caption{nach: $k_{13}$ is rechtes Kind von $\dot{k}_{-\infty}$ $\implies$ 			RotiereNachLinks($\dot{k}_{-\infty}$)}
+    \caption{Nach $k_{13}$ ist rechtes Kind von $\dot{k}_{-\infty}$ $\implies$ 			RotiereNachLinks($\dot{k}_{-\infty}$)}
   \end{subfigure} 
   }
   \quad
@@ -556,7 +556,7 @@ Entferne Wurzel aus Treap:
       
     \end{tikzpicture}
     \label{subfig:aufg9-i-1-after}
-    \caption{nach: $j_{19}$ is rechtes Kind von $\dot{k}_{-\infty}$ $\implies$ 			RotiereNachLinks($\dot{k}_{-\infty}$)}
+    \caption{Nach $j_{19}$ ist rechtes Kind von $\dot{k}_{-\infty}$ $\implies$ 			RotiereNachLinks($\dot{k}_{-\infty}$)}
   \end{subfigure} 
   }
  	\quad
@@ -580,7 +580,7 @@ Entferne Wurzel aus Treap:
       
     \end{tikzpicture}
     \label{subfig:aufg9-i-1-after}
-    \caption{nach: $i_{22}$ is rechtes Kind von $\dot{k}_{-\infty}$ $\implies$ 			RotiereNachLinks($\dot{k}_{-\infty}$)}
+    \caption{Nach $i_{22}$ ist rechtes Kind von $\dot{k}_{-\infty}$ $\implies$ 			RotiereNachLinks($\dot{k}_{-\infty}$)}
   \end{subfigure} 
 }  
 \quad
@@ -604,7 +604,7 @@ Entferne Wurzel aus Treap:
       
     \end{tikzpicture}
     \label{subfig:aufg9-i-1-after}
-    \caption{nach: $h_{25}$ ist linkes Kind von $\dot{k}_{-\infty}$ $\implies$ 			RotiereNachRechts($\dot{k}_{-\infty}$)\\
+    \caption{Nach $h_{25}$ ist linkes Kind von $\dot{k}_{-\infty}$ $\implies$ 			RotiereNachRechts($\dot{k}_{-\infty}$)\\
     Der Hilfsknoten $\dot{k}_{-\infty}$ ist jetzt ein Blatt und kann einfach entfernt werden.}
   \end{subfigure} 
   }
@@ -614,7 +614,7 @@ Entferne Wurzel aus Treap:
 
 
 \newpage
-iv.)F{\"u}hren Sie $Spalte \left( T, d, T_1, T_2 \right)$ durch, wobei $T$
+iv.) F{\"u}hren Sie $Spalte \left( T, d, T_1, T_2 \right)$ durch, wobei $T$
     der Treap aus dem vorigen Punkt ist.
 
 Füge Knoten $d_{-\infty}$ in T ein:
@@ -663,7 +663,7 @@ Füge Knoten $d_{-\infty}$ in T ein:
       
     \end{tikzpicture}
     \label{subfig:aufg9-i-1-after}
-    \caption{nach: $d_{-\infty}$ ist linkes Kind von $f_7$ $\implies$ 			RotiereNachRechts($f_7$)}
+    \caption{Nach $d_{-\infty}$ ist linkes Kind von $f_7$ $\implies$ 			RotiereNachRechts($f_7$)}
   \end{subfigure} 
   }
 
@@ -688,7 +688,7 @@ Füge Knoten $d_{-\infty}$ in T ein:
       
     \end{tikzpicture}
     \label{subfig:aufg9-i-1-after}
-    \caption{nach: $d_{-\infty}$ ist linkes Kind von $g_6$ $\implies$ 			RotiereNachRechts($g_6$)}
+    \caption{Nach $d_{-\infty}$ ist linkes Kind von $g_6$ $\implies$ 			RotiereNachRechts($g_6$)}
   \end{subfigure} 
 	}
 \quad
@@ -711,7 +711,7 @@ Füge Knoten $d_{-\infty}$ in T ein:
       
     \end{tikzpicture}
     \label{subfig:aufg9-i-1-after}
-    \caption{nach: $d_{-\infty}$ ist rechtes Kind von $c_2$ $\implies$ 			RotiereNachLinks($c_2$)}
+    \caption{Nach $d_{-\infty}$ ist rechtes Kind von $c_2$ $\implies$ 			RotiereNachLinks($c_2$)}
   \end{subfigure} 
 	}
 \quad
@@ -789,11 +789,8 @@ Zu zeigen: $C + D = R$
 Ausgehend von der Annahme, dass $C + D = R$ vor der ersten Rotation gilt,
 zeigen wir nun, dass $C + D = R$ auch nach der darauffolgenden Rotation gilt.
 
-{\bfseries I.A.:} $C + D = 0$ gilt trivialerweise, da $C = D = 0$.
+$C + D = R$ gilt f{\"u}r $N$ Rotation (auch f{\"u}r $C = D = 0$ trivialerweise).
 
-{\bfseries I.B.:} $C + D = R$ gilt f{\"u}r $N$ Rotation.
-
-{\bfseries I.S.:}
 Seien $C$, $D$, $C_{NR}$ und $D_{NR}$ wie folgt:
 
 $C$ \ldots L{\"a}nge des rechten Randes des linken Unterbaums des Knotens mit
