--- a/assignments/07_kocher/theorie.tex
+++ b/assignments/07_kocher/theorie.tex
@@ -253,7 +253,7 @@ O. B. d. A. betrachten wir den Fall $n=2^k$ mit $k \in \mathbb{N}$\\
 C_1=(2^0+1)+(2^1+1)+(2^2+1)+...+(2^{\operatorname{ld}(n)-1}+1)
 \end{equation}
 \begin{equation}
-C_1=1+{\operatorname{ld}(n)}+\sum_{i=0}^{\operatorname{ld}(n)-1} 2^{i}
+C_1={\operatorname{ld}(n)}+\sum_{i=0}^{\operatorname{ld}(n)-1} 2^{i}
 \end{equation}
 Es gilt (kann durch Induktion einfach gezeigt werden):
 \begin{equation}
