--- a/assignments/08_kocher/theorie.tex
+++ b/assignments/08_kocher/theorie.tex
@@ -27,49 +27,112 @@ Geben Sie f{\"u}r die Operationen {\"u}ber die Datenstruktur aus der Aufgabe 15
 eine Potentialfunktion an und zeigen Sie mit Hilfe dieser Potentialfunktion, dass
 die amortisierten Kosten einer Operation konstant sind.
 
+\begin{minipage}{.35\textwidth}
+\begin{table}[H]
+  \centering
+  \begin{tabular}{l|l}
+    Op$_i$  & $c_i$       \tabularnewline
+    \hline\hline
+    1       & 2           \tabularnewline
+    2       & 2 (teuer)   \tabularnewline
+    3       & 3 (teuer)   \tabularnewline
+    4       & 2           \tabularnewline
+    5       & 5 (teuer)   \tabularnewline
+    6       & 2           \tabularnewline
+    7       & 2           \tabularnewline
+    8       & 2           \tabularnewline
+    9       & 9 (teuer)   \tabularnewline
+    10      & 2           \tabularnewline
+    11      & 2           \tabularnewline
+    12      & 2           \tabularnewline
+    13      & 2           \tabularnewline
+    14      & 2           \tabularnewline
+    15      & 2           \tabularnewline
+    16      & 2           \tabularnewline
+    17      & 17 (teuer)  \tabularnewline
+    18      & 2           \tabularnewline
+    \hline
+  \end{tabular}
+  \caption{Kosten f{\"u}r $1 \leq i \leq 18$}
+  \label{tbl:costs}
+\end{table}
+\end{minipage}
+\begin{minipage}{.55\textwidth}
 \begin{center}
 $c_i=\begin{cases} i$, falls $i=2^k+1$ mit $k \in \mathbb{N}  \\ 2$, sonst.$  \end{cases}$
 \end{center}
 
 Die Potentialfunktion sei folgendermaßen definiert: 
-\begin{center}
-$\phi(D_i)=2i-2^{\lfloor{ld(i-1)}\rfloor+1}+1$
-\end{center}
-Für alle Operationen i mit $i=2^k+1$ gilt also: \\
-\begin{center}
-$\phi(D_i)=2i-2^{\lfloor{ld(i-1)}\rfloor+1}+1=2i-(2(i-1))+1=3$
-\end{center}
-Für alle Operationen i mit $i!=2^k+1$ gilt : \\
-\begin{center}
-$\phi(D_i)=2i-(i-1)+1=2i-i+2=i+2$
-\end{center}
+\begin{equation}
+  \phi(D_0) = 0\qquad\phi(D_i)=2i-2^{\lfloor{ld(i-1)}\rfloor+1}+1
+\end{equation}
+Diese Potentialfunktion $\phi(D_i)$ entspricht genau dem Kredit nach der $i$-ten
+Operation (f{\"u}r $i > 0$) wenn man die Bankkonto-Methode anwendet.
+
+Einige Gleichungen, die wir im Zuge der Berechnung der amortisierten Kosten
+benutzen werden:
+\begin{equation}
+  \label{eq:2-power-kpl1}
+  2^{k+1} = 2(i-1)\text{, wenn }i=2^{k+1}
+\end{equation}
+\begin{equation}
+  \label{eq:2-power-k}
+  2^k=(i-1)\text{, wenn }i\neq2^{k+1}
+\end{equation}
+\begin{equation}
+  \label{eq:ld-equality}
+  \lfloor ld(i-1) \rfloor = \lfloor ld(i-2) \rfloor\text{, wenn }i\neq2^{k+1}
+\end{equation}
+
+Gleichung~\ref{eq:ld-equality} gilt aufgrund der Tatsache, dass es für jedes
+beliebige $k$ zwischen $2^k + 1$ und $2^{k+1} + 1$ immer ein $i$ gibt, sodass
+$i > 2^k + 1$ gilt. \newline
+\end{minipage}
+
+Für alle Operationen $i$ mit $i=2^k+1$ gilt also: \\
+\begin{equation}
+\phi(D_i) = 2i-2^{\lfloor{ld(i-1)}\rfloor+1}+1 = 2i-2^{k+1}+1
+\end{equation}
+Mit Gleichung~\ref{eq:2-power-kpl1} erh{\"a}lt man dann
+\begin{equation}
+\phi(D_i) = 2i - 2(i - 1) + 1 = 2i - 2i + 2 + 1 = 3
+\end{equation}
+
+Für alle Operationen $i$ mit $i\neq2^k+1$ gilt: \\
+\begin{equation}
+\phi(D_i)=2i-(i-1)+1=2i-i+2=i+2
+\end{equation}
 Überlegung:
 Unser Potential steigt also zwischen den Operationen $i=2^{j-1}+1$ und $k=2^{j}+1$ stetig an, um dann nach der Operation $u=2^{j}$ seinen Maximalwert zu erreichen, welcher von der Operation $k=2^{j}+1$ aufgebraucht wird.
 
 Für die amortisierten Kosten gilt: 
 \begin{itemize}
-\item Für alle Operationen i mit $i=2^k+1$:\\
-\begin{align*}
-\hat{c_i}=c_i+\phi(D_i)-\phi(D_{i-1})\\
-=i+(2i-(2(i-1))+1)-(2(i-1)-(i-1)+1)\\
-=i+(2i-2i+2+1)-(2(i-1)-(i-1)+1)\\
-=i+3-i\\
-=3
-\end{align*}
-\item Für alle Operationen i mit $i!=2^k+1$:\\
-\\
-Fall 1: $(i-1) \neq 2^k+1$ 
-\begin{align*}
-\hat{c_i}=c_i+\phi(D_i)-\phi(D_{i-1})\\
-=2+(2i-(i-1)+1)-(2(i-1)-(i-1)+1)\\
-=2+i+2-i\\
-=4
-\end{align*}
-Fall 2: $(i-1) = 2^k+1$ 
-
+  \item Für alle Operationen $i$ mit $i=2^k+1$:\\
+    \begin{align*}
+    \hat{c_i} = c_i + \phi(D_i) - \phi(D_{i-1}) \\
+    = i + 2i - 2^{\lfloor ld(i - 1) \rfloor + 1} + 1 - \left( 2(i - 1) - 2^{\lfloor ld((i - 1) - 1) \rfloor + 1} + 1 \right) \\
+    = 3i - 2^{k + 1} + 1 - \left( 2i - 2 - 2^k + 1 \right) \\
+    \stackrel{\mathrm{Gl.~\ref{eq:2-power-kpl1}}}= 3i - 2(i - 1) + 1 - 2i + 2 + 2^k - 1 \\
+    \stackrel{\mathrm{Gl.~\ref{eq:2-power-k}}}= i - 2i + 2 + 1 + 2 - 1 + (i - 1) \\
+    = 3 \leq 3 \Rightarrow\text{ in }O(1)
+    \end{align*}
+  \item Für alle Operationen $i$ mit $i\neq2^k+1$:\\
+    \begin{align*}
+    \hat{c_i} = 2 + 2i - 2^{\lfloor ld(i - 1) \rfloor + 1} + 1 - \left( 2(i - 1) - 2^{\lfloor ld(i - 2) \rfloor + 1} + 1 \right) \\
+    \hat{c_i} = 2 + 2i - 2^{\lfloor ld(i - 1) \rfloor + 1} + 1 - 2i + 2 + 2^{\lfloor ld(i - 2) \rfloor + 1} - 1 \\
+    \hat{c_i} \stackrel{\mathrm{Gl.~\ref{eq:ld-equality}}}= 4 \leq 4 \Rightarrow\text{ in }O(1)
+    \end{align*}
 \end{itemize}
 
-Grundsätzlich warad mei Idee sowas gwesn: 
+\begin{equation}
+\Longrightarrow \hat{c_i} = \begin{cases}3\text{, wenn }i = 2^k + 1 \\ 4\text{, sonst}\end{cases}\in O(1)
+\end{equation}
+
+Der Vollst{\"a}ndigkeit halber sei noch kurz bewiesen, dass unsere
+Potentialfunktion $\phi(D_i)$ nicht negativ ist:
+\begin{equation}
+  \phi(D_i) = 2i - 2^{\lfloor ld(i - 1) \rfloor + 1} + 1 \geq 2i - 2(i - 1) + 1 = 2i - 2i + 2 + 1 = 3 \geq 0
+\end{equation}
 
 %\clearpage
 
