--- a/assignments/08_kocher/theorie.tex
+++ b/assignments/08_kocher/theorie.tex
@@ -134,7 +134,7 @@ Potentialfunktion $\phi(D_i)$ nicht negativ ist:
   \phi(D_i) = 2i - 2^{\lfloor ld(i - 1) \rfloor + 1} + 1 \geq 2i - 2(i - 1) + 1 = 2i - 2i + 2 + 1 = 3 \geq 0
 \end{equation}
 
-%\clearpage
+\clearpage
 
 {\bfseries Aufgabe 17}%
 
