--- a/assignments/08_kocher/theorie.tex
+++ b/assignments/08_kocher/theorie.tex
@@ -73,15 +73,15 @@ Einige Gleichungen, die wir im Zuge der Berechnung der amortisierten Kosten
 benutzen werden:
 \begin{equation}
   \label{eq:2-power-kpl1}
-  2^{k+1} = 2(i-1)\text{, wenn }i=2^{k+1}
+  2^{k+1} = 2(i-1)\text{, wenn }i=2^{k}+1
 \end{equation}
 \begin{equation}
   \label{eq:2-power-k}
-  2^k=(i-1)\text{, wenn }i\neq2^{k+1}
+  2^k=(i-1)\text{, wenn }i\neq2^{k}+1
 \end{equation}
 \begin{equation}
   \label{eq:ld-equality}
-  \lfloor ld(i-1) \rfloor = \lfloor ld(i-2) \rfloor\text{, wenn }i\neq2^{k+1}
+  \lfloor ld(i-1) \rfloor = \lfloor ld(i-2) \rfloor\text{, wenn }i\neq2^{k}+1
 \end{equation}
 
 Gleichung~\ref{eq:ld-equality} gilt aufgrund der Tatsache, dass es für jedes
